--- a/src/components/Sidebar/Secret/secretStyles.css
+++ b/src/components/Sidebar/Secret/secretStyles.css
@@ -46,8 +46,7 @@
     display: flex;
     padding: 0px 0px 5px 0px;
     width: 100%;
-    word-break: break-all;
-    overflow-wrap: break-word;
+    word-break: break-word;
     max-height: 176px;
 }
 
